<resources>
    <string name="app_name">RecepiBook</string>
    <string name="Welocome">What would you like to cook today?</string>
    <string name="UserName">User Name?</string>
    <string name="Pass">Password?</string>
    <string name="Login">Login</string>
    <string name="CreateAccount">Create Account?</string>
    <string name="Add">Add Recipe</string>
    <string name="RBL">Recipe Book Logo</string>
    <string name="RecipeName">Nama Resep</string>
    <string name="Bahan">Bahan-Bahan</string>
    <string name="Langkah">Langkah-Langkah</string>
    <string name="Preview">Preview Gambar</string>
    <string name="AmbilGambar">Pilih Gambar dari Galeri</string>
    <string name="SaveRecipe">Simpan Resep</string>
    <string name="Koleksi">Favorite</string>
    <string name="Search">Cari Resep</string>
    <string name="Mic">Mic</string>
    <string name="Popular">Resep Populer</string>
    <string name="Judul">Judul Resep</string>
    <string name="BahanBahan">Bahan-Bahan :</string>
    <string name="LangkahLangkah">Langkah-Langkah :</string>
    <string name="GambarMakanan">Gambar Makanan</string>
    <string name="HasilPencarian">Hasil Pencarian</string>
    <string name="Save">Simpan</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="my_recipes">My Recipes</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

</resources>