<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/green"
    android:background="@drawable/edittext_border">

    <LinearLayout
        android:orientation="vertical"
        android:padding="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:background="@drawable/edittext_border">

        <ImageView
            android:id="@+id/recipeImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/sample_recipe"
            android:backgroundTint="@color/white"
            android:background="@drawable/edittext_border"
            android:contentDescription="@string/GambarMakanan"/>

        <TextView
            android:id="@+id/recipeTitle"
            android:text="@string/Judul"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>

        <TextView
            android:text="@string/BahanBahan"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/ingredientsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="..."
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:background="@drawable/edittext_border"/>

        <TextView
            android:text="@string/LangkahLangkah"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/stepsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="..."
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:background="@drawable/edittext_border"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_save"
            android:tint="@android:color/white"
            android:backgroundTint="@color/red"
            android:contentDescription="@string/Save"/>
    </LinearLayout>
</ScrollView>
